# Team4-edge

./: README.md
CentralHub/: central_hub.py  optimised_hub.py  optimised_hubthreadpool.py
Driver/: falldetection.py  falldetection2.py  falldetection3.py  falldetection4.py  falldetection_base.py  requirements.txt  ultrasonic.py  ultrasonic_final.py  ultrasonic_initial.py  video_requirements.txt  wake_word.py
Edge_Flask/: app.py  requirements.txt
Edge_Flask/templates/: dashboard.html  dashboard_template.html  index.html  notification.html  notifications.html  test_mqtt.py  video_stream.html
Failed_experiments/OpenCV_with_mediapipe_in_C/: CMakeLists.txt  fall_detection.cpp  fall_detection.hpp  main.cpp  pose_tracking_graph.pbtxt
ML/: audio_model.py  audio_processing.py  file_conversion.py  model_quant.tflite  yamnet_classifier.tflite  yamnet_classifier_training.py
output/: audio.md
